reuse NewCluster for ClustersEditRequest
