# databricks/clusters_edit_request.go
@@ -1,43 +1,0 @@
-/*
- * Databricks REST API
- *
- * The Databricks REST API 2.0 supports of a variety of services.
- *
- * API version: 2.0
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package databricks
-
-type ClustersEditRequest struct {
-
-	NumWorkers int32 `json:"num_workers,omitempty"`
-
-	Autoscale *ClustersAutoScale `json:"autoscale,omitempty"`
-
-	ClusterId string `json:"cluster_id"`
-
-	ClusterName string `json:"cluster_name,omitempty"`
-
-	SparkVersion string `json:"spark_version"`
-
-	SparkConf map[string]string `json:"spark_conf,omitempty"`
-
-	AwsAttributes *ClustersAwsAttributes `json:"aws_attributes,omitempty"`
-
-	NodeTypeId string `json:"node_type_id"`
-
-	DriverNodeTypeId string `json:"driver_node_type_id,omitempty"`
-
-	SshPublicKeys []string `json:"ssh_public_keys,omitempty"`
-
-	CustomTags map[string]string `json:"custom_tags,omitempty"`
-
-	ClusterLogConf *ClustersClusterLogConf `json:"cluster_log_conf,omitempty"`
-
-	SparkEnvVars map[string]string `json:"spark_env_vars,omitempty"`
-
-	AutoterminationMinutes int32 `json:"autotermination_minutes,omitempty"`
-
-	EnableElasticDisk bool `json:"enable_elastic_disk,omitempty"`
-}
