# swagger.yaml
@@ -77,7 +77,9 @@ paths:
           name: "body"
           required: true
           schema:
-            $ref: "#/definitions/ClustersEditRequest"
+            # FIXME(Chiyu): not like create cluster, edit cluster require cluster_id,
+            # we should able to re use NewCluster with swagger 3 models.
+            $ref: "#/definitions/NewCluster"
       responses:
         200:
           description:
@@ -314,52 +316,6 @@ definitions:
     properties:
       cluster_id:
         type: string
-  ClustersEditRequest:
-    required:
-      - cluster_id
-      - spark_version
-      - node_type_id
-    properties:
-      num_workers:
-        type: integer
-        format: int32
-      autoscale:
-        $ref: "#/definitions/ClustersAutoScale"
-      cluster_id:
-        type: string
-      cluster_name:
-        type: string
-      spark_version:
-        type: string
-      spark_conf:
-        type: object
-        additionalProperties:
-          type: string
-      aws_attributes:
-        $ref: "#/definitions/ClustersAwsAttributes"
-      node_type_id:
-        type: string
-      driver_node_type_id:
-        type: string
-      ssh_public_keys:
-        type: array
-        items:
-          type: string
-      custom_tags:
-        type: object
-        additionalProperties:
-          type: string
-      cluster_log_conf:
-        $ref: "#/definitions/ClustersClusterLogConf"
-      spark_env_vars:
-        type: object
-        additionalProperties:
-          type: string
-      autotermination_minutes:
-        type: integer
-        format: int32
-      enable_elastic_disk:
-        type: boolean
   ClustersStartRequest:
     required:
       - cluster_id
@@ -757,6 +713,8 @@ definitions:
       - spark_version
       - node_type_id
     properties:
+      cluster_id:
+        type: string
       num_workers:
         type: integer
         format: int32
